--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor-style.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor-style.html
@@ -145,7 +145,7 @@
             }
 
             .editor-tree div.editor-tree-item {
-                padding: 2px 10px;
+                padding: 2px 5px 2px 10px;
                 cursor: pointer;
             }
 
@@ -166,6 +166,8 @@
                 text-decoration: underline;
             }
 
+            .editor-tree a.scope-in,
+            .editor-tree a.show-icon,
             .editor-tree a.hidden-icon {
                 width: 18px;
                 height: 18px;
@@ -177,6 +179,16 @@
                 margin-top: 1px;
                 background-color: #ebebe4;
                 border-radius: 2px;
+                text-align: center;
+                margin-left: 5px;
+            }
+
+            .editor-tree a.show-icon {
+                background-image: url(images/eye.svg);
+            }
+
+            .editor-tree a.scope-in {
+                background-image: none;
             }
 
             juicy-popover div.popup {
