Load juicy-tile-editor on demand
https://github.com/StarcounterPrefabs/Launcher/issues/101

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -36,7 +36,6 @@
 
     <link rel="import" href="/sys/imported-template/imported-template.html" />
     <link rel="import" href="/sys/dom-bind-notifier/dom-bind-notifier.html" />
-    <link rel="import" href="/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html" />
     <link rel="import" href="/sys/juicy-redirect/juicy-redirect.html" />
 
     <!-- Style sheets -->
@@ -125,10 +124,7 @@
         <launcher-hot-key keys="Esc" onkeypress="toggleEditor"></launcher-hot-key>
         <template is="dom-if" restamp if="{{model.editingMode$}}">
             <div id="elementSettings" class="launcher-topbar">
-                <juicy-tile-simple-editor default-selected-list-selectors='[".visible juicy-tile-table"]'
-                                   class="max-height"
-                                   has-changes="{{model.layoutModified$}}"
-                                   on-close-click="closeEditor"></juicy-tile-simple-editor>
+                <template is="imported-template" model="{{model}}" content="/Launcher/viewmodels/LayoutEditor.html"></template>
             </div>
         </template>
 
