--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
     <title>Launcher</title>
     <!-- Object.observe & Array.observe shims for IE and FF -->
@@ -171,3 +172,4 @@
     <puppet-client ref="root-launcher-dom-bind"></puppet-client>
     <starcounter-debug-aid></starcounter-debug-aid>
 </body>
+</html>
