switch from "visible" class to attribute (https://github.com/StarcounterPrefabs/Launcher/issues/204)
adding a class to classList was in conflict with Polymer binding the starcounter-include class attribute in LauncherTemplate.html

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LayoutEditor.html
@@ -2,7 +2,7 @@
 
 <template>
     <template is="dom-bind">
-        <juicy-tile-simple-editor default-selected-list-selectors='[".visible juicy-tile-table"]'
+        <juicy-tile-simple-editor default-selected-list-selectors='["[visible] juicy-tile-table"]'
                                   class="max-height"
                                   has-changes="{{model.layoutModified$}}"
                                   on-close-click="closeEditor"></juicy-tile-simple-editor>
