--- a/src/Launcher/wwwroot/Launcher/elements/launcher-menu/launcher-menu.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-menu/launcher-menu.html
@@ -24,7 +24,7 @@
                 sortItems: function () {
                     this.observer.disconnect();
 
-                    var lis = this.querySelectorAll("html /deep/ li");
+                    var lis = this.querySelectorAll("html li");
 
                     lis = Array.prototype.slice.call(lis, 0);
                     lis.sort(function (a, b) {
@@ -40,7 +40,7 @@
                         return 0;
                     });
 
-                    var ul = this.querySelector("html /deep/ ul");
+                    var ul = this.querySelector("html ul");
 
                     for (var i = 0, l = lis.length; i < l; i++) {
                         ul.appendChild(lis[i]);
