--- a/src/Launcher/wwwroot/Launcher/elements/tu-logo-with-spinner/tu-logo-with-spinner.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-logo-with-spinner/tu-logo-with-spinner.html
@@ -182,7 +182,7 @@
 
         </style>
   <template>
-            <div id="logo" onclick="puppet.morphUrl('/launcher/dashboard')"></div>
+            <div id="logo" onclick="puppet.puppet.morphUrl('/launcher/dashboard')"></div>
             <div class="timer" id="spinner">
                 Loading...
             </div>
