activated shadow doom again

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -10,8 +10,8 @@
     <!-- Import Polymer platform -->
     <script src="/sys/webcomponentsjs/webcomponents.js"></script>
     <script>
-      //window.Polymer = window.Polymer || {};
-      //window.Polymer.dom = "shadow";
+      window.Polymer = window.Polymer || {};
+      window.Polymer.dom = "shadow";
       //Raven.config('https://25d8d13cb3474332b051f3a8c8c3e647@app.getsentry.com/65046').install();
     </script>
 
@@ -52,7 +52,7 @@
     <!--<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!--<link rel="stylesheet" type="text/css" href="/sys/font-awesome/css/font-awesome.css">-->
-    <link rel="import" type="css" href="/sys/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="/sys/font-awesome/css/font-awesome.css">
     <!-- Style sheets -->
     <!--<link rel="import" href="/sys/bootstrap.html" />-->
     <link rel="stylesheet" href="/Launcher/css/style.css" />
