--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -196,7 +196,7 @@
         })();
     </script>
 
-    <puppet-client ref="root-launcher-dom-bind"></puppet-client>
+    <puppet-client ref="root-launcher-dom-bind" ignore-add="/_.+"></puppet-client>
 	  <!--<puppet-bind-notifier path="model" ref="root-launcher-dom-bind"></puppet-bind-notifier>-->
     <starcounter-debug-aid></starcounter-debug-aid>
     <script>
