--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search-input/launcher-search-input.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search-input/launcher-search-input.html
@@ -7,28 +7,32 @@
             height: 0px;
             width: 0px;
         }
-		input {
-			border:0;
-			height: 35px;
-			outline: none;
-			background: transparent;
-			outline: none;
-			color: #FFF;
-			font-weight: 200;
-			padding-left:10px;
-			font-size: 14px;
-		}
-		input::-webkit-input-placeholder {
-		    color:rgba(255,255,255,.5);
-		}
-		input::-moz-placeholder {
-			color:rgba(255,255,255,.5);
-		}
-		input:-ms-input-placeholder {
-			color:rgba(255,255,255,.5);
-		}
+
+        input {
+          border:0;
+          height: 35px;
+          outline: none;
+          background: transparent;
+          outline: none;
+          color: #FFF;
+          font-weight: 200;
+          padding-left:10px;
+          font-size: 14px;
+        }
+
+        input::-webkit-input-placeholder {
+          color:rgba(255,255,255,.5);
+        }
+
+        input::-moz-placeholder {
+          color:rgba(255,255,255,.5);
+        }
+
+        input:-ms-input-placeholder {
+          color:rgba(255,255,255,.5);
+        }
     </style>
-    <template><input placeholder="{{placeholder}}" value="{{value::change}}" on-keypress="onKeyPress" on-blur="onBlur" /></template>
+    <template><input placeholder="{{placeholder}}" value="{{value::input}}" on-keypress="onKeyPress" on-blur="onBlur" /></template>
     <script>
         Polymer({
             is: "launcher-search-input",
